# sal-segment-eval

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
_testfiles/: octave_test.py
app/config/: exp_config.py
app/eval/graphs/: graph.py
app/eval/graphs/csv/: quality_time.csv  res_thru.csv  t_comparison.txt
app/eval/stats/: aim_check.py  res_thru.py  seg_stats.py  stat_helpers.py  visual_compare.py
app/eval/stats/results/: results.csv
app/models/: custom_models.py  u2_wrapper.py
app/models/pysal/SUN/: SUN_wrapper.m
app/models/samnet/: SAMNet.py  samnet_wrapper.py
app/models/u2net/: dl_U2_weights.py  u2_wrapper.py
app/stats/: graphs.py  res_thru.py  seg_stats.py  significant_diff  stat_helpers.py
app/stats/results/: fullset_stats.txt  model_comparisons.csv  model_stats.csv  model_stats.txt  old_model_stats.txt  radar_means.csv  results.csv
sal_segment_eval.egg-info/: PKG-INFO  SOURCES.txt
segment_eval.egg-info/: PKG-INFO  SOURCES.txt
