[metadata]
name = segment-eval
version = 1.0.0
description = Salient obj segmentation evaluation tools (includes custom saliency models)
author = Tessa Chessnoe 
author_email = you@example.com
url = https://github.com/TessaChessnoe/sal-segment-eval
classifiers = Programming Language :: Python :: 3

[options]
# automatically find all packages under the project root
packages = find:
# require at least Python 3.10 (per your environment.yml)
python_requires = >=3.10
# minimal runtime deps needed for app.models.custom_models
install_requires =
    numpy
    opencv-contrib-python
    scikit-image

[options.packages.find]
# look for package directories (those containing __init__.py) here
where = .